Fixed GERONIMO-2008 Deployment of war with config file on classpath root fails due to '!' in url Backed out and reapplied GERONIMO-1636 with changes for url Replaced JarFile subclasses with ResourceLocation wich abstracts management of resources from a single location Added hooks for downloading a caching of remote resources Added extensive test
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.1@405948 13f79535-47bb-0310-9956-ffa450edef68